# enigma

./: enigma.cabal
app/: Main.hs
src/: Enigma.hs  SteckerBrett.hs  Wheel.hs
tests/: test-enigma.hs
