cabal-version:      2.4
name:               enigma
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Gabriel Kabbe
maintainer:         gabriel.kabbe@mail.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable enigma
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: 
       Wheel,
       Enigma,
       SteckerBrett

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0,
        mtl,
        unordered-containers
    hs-source-dirs:   app, src
    default-language: Haskell2010

test-suite enigma-tests
    type: exitcode-stdio-1.0
    hs-source-dirs: tests, src
    main-is: test-enigma.hs
    other-modules:
        Wheel,
        Enigma,
        SteckerBrett

    build-depends: base,
        QuickCheck,
        HUnit,
        mtl,
        unordered-containers
